# plateforme_inss

./: .env.example  .gitignore  Cahier_des_charges_e-INSS_Realisation_Claude.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
apps/accounts/: admin.py  agent_html_urls.py  apps.py  html_urls.py  html_views.py  managers.py  mixins.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/affiliates/: admin.py  apps.py  filters.py  forms.py  html_urls.py  html_views.py  models.py  serializers.py  urls.py  views.py
apps/audit/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
apps/benefits/: __init__.py  admin.py  agent_html_urls.py  apps.py  citizen_html_urls.py  forms.py  html_urls.py  html_views.py  models.py  serializers.py  urls.py  views.py
apps/cards/: admin.py  apps.py  exceptions.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/claims/: admin.py  agent_html_urls.py  apps.py  citizen_html_urls.py  forms.py  html_urls.py  html_views.py  models.py  serializers.py  urls.py  views.py
apps/contributions/: admin.py  apps.py  filters.py  forms.py  html_urls.py  html_views.py  models.py  serializers.py  urls.py  views.py
apps/controls/: admin.py  apps.py  forms.py  html_urls.py  html_views.py  models.py
apps/core/: admin.py  apps.py  context_processors.py  models.py
config/: celery.py  urls.py
scripts/: generate_keys.py  start.sh
templates/: base.html  landing.html
tests/: conftest.py  factories.py  test_lot1.py  test_lot2.py  test_lot3.py  test_lot4.py  test_lot5.py
(+158 files in other folders)
