[project]
name = "einss"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "psycopg[binary]>=3.1",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    "Pillow>=10.0",
    "weasyprint>=62.0",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "drf-spectacular>=0.27",
    "django-ratelimit>=4.1",
    "python-decouple>=3.8",
    "django-filter>=24.0",
    "gunicorn>=22.0",
    "whitenoise>=6.7",
    "django-celery-beat>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "djangorestframework-stubs>=3.15",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 119
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]
addopts = "--cov=apps --cov-report=term-missing"
